frontend/tests/errors/ER-011/integer_division_by_zero/test.vx
// @rfc: doc/vexel-rfc.md#errors--diagnostics
// @desc: Division by zero traps at runtime | Division by zero compiles but traps at runtime


&^main() -> #i32 {
    5 / 0
}
